# TodayFlow

./: .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
astro/: .env.example  Dockerfile  README.md  pyproject.toml
astro/tests/: test_house_math.py
backend/: .env.example  .pytest_todayflow.main.sqlite  Dockerfile  README.md  dev.db  pyproject.toml  pytest.ini  test.db  test_runtime.db  test_runtime2.db  test_runtime_ci.db
backend/scripts/: apply_tracking_migration.py  apply_tracking_migration.sh  apply_tracking_migration_sqlite.py  compare_compatibility_models.py  export_today_generation_logs.py  pr1_live_pim_audit_pass.sh  test_gemini_text.py  test_tracking_api.py  today_language_corpus_v0.py  today_language_patterns_v0.py
backend/tests/: __init__.py  conftest.py  test_account.py  test_admin.py  test_ascetic_definition_registry.py  test_aspects.py  test_attachment_style_registry.py  test_auth.py  test_bazi.py  test_calendar_day_record_v1.py  test_calendar_intelligence_consumer_policy_v1.py  test_calendar_month_map_v1.py  test_calendar_rhythm_bridge_v1.py  test_calendar_rhythm_pattern_candidate_v1.py  test_calendar_rhythm_pattern_v1.py  test_calendar_signal_ingestion_v1.py  test_capability_resolver_v0.py  test_card_number_reveal_gate_v1.py  test_celestial.py  test_celestial_events_builder.py  test_challenges.py  test_chinese_metaphysics.py  test_compact_user_model_identity_v0.py  test_compact_user_model_v0.py  test_compatibility_access_v0.py  test_compatibility_attachment_knowledge_spawn_v0.py  (+197 more)
(+2708 files in other folders)
