[project]
name = "todayflow-backend"
version = "0.1.0"
description = "Core API for TodayFlow MVP 0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "email-validator>=2.1.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.26.0",
  "sqlalchemy>=2.0.25",
  "psycopg[binary]>=3.1.17",
  "python-multipart>=0.0.9",
  "stripe>=8.0.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.2.0",
  "pyjwt>=2.9.0",
  "weasyprint>=62.0",
  "slowapi>=0.1.9",
  "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.2.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.26.0",
  "jsonschema>=4.22.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
todayflow_backend = [
  "data/cities.json",
  "db/migrations/*.sql",
]
